Change justify content for grid collection. Fix white gaps between elements.

--- a/source/stylesheets/modules/_m-cq-work-portfolio.scss
+++ b/source/stylesheets/modules/_m-cq-work-portfolio.scss
@@ -1,5 +1,6 @@
 .m-cq-work-portfolio {
   &.m-grid-collection {
+    justify-content: flex-start;
     margin: 0;
   }
 
